final stylying almost done

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,13 @@
       src="https://kit.fontawesome.com/3c0ccc9c73.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Rubik&family=Tektur&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
